# lumina

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
configs/: README.md  log_schema.json
configs/benchmarks/: checkpoint6_regime_benchmark.yaml  needle_minimal.yaml
configs/experiments/: checkpoint5_mlx_smoke.yaml  checkpoint5_runtime_os.yaml
configs/policies/: hybrid_grid.yaml  regime_profiles.yaml
configs/regimes/: checkpoint4_regimes.yaml
data/: README.md
data/benchmark_sets/: docqa_minimal.jsonl
docs/: blueprint.md
experiments/: README.md
logs/adaptive_os/: runtime_os_latest.jsonl  runtime_os_mlx_smoke.jsonl
logs/benchmarks/: checkpoint6_latest.jsonl  needle_minimal_latest.jsonl
logs/compression/: compression_20260428_115227.jsonl  compression_20260428_115401.jsonl
logs/policy/: policy_20260502_213835.jsonl  policy_20260502_214026.jsonl  policy_20260502_214114.jsonl  policy_mlx_q8_smoke.jsonl
reports/: README.md  report-checkpoint-1.md  report-checkpoint-2.md  report-checkpoint-3.md  report-checkpoint-4.md  report-checkpoint-5.md  report-checkpoint-6.md  system_report.md
reports/checkpoint-1/: baseline_summary.csv
reports/checkpoint-3/: compression_summary.csv
reports/checkpoint-4/: policy_cost_terms.csv  (+5 more)
scripts/: analyze_cache_pca.py  compare_compression.py  demo_lumina.py  extract_cache.py  generate_baseline_report.py  memory_pressure.py  run_baseline.py  run_benchmarks.py  run_lumina.py  run_needle_benchmark.py  run_policy_experiment.py  simulate_kv_pipeline_order.py
src/: __init__.py  telemetry.py
tests/: test_core.py
(+45 files in other folders)
